# timerys

./: CHANGELOG.md  Cargo.toml  README.md
src/: audio.rs  main.rs  num_input_container.rs  styling.rs  widgets.rs
src/styling/: button.rs  text.rs  text_input.rs
src/widgets/: time_input.rs
